[package]
name = "m27q-kvm"
version = "0.1.0"
edition = "2018"
readme = "README.md"
license = "MIT OR Apache-2.0"
categories = ["monitor", "hardware-support", "usb"]
keywords = ["m27q", "kvm", "usb"]
repository = "https://github.com/MabezDev/m27q-kvm"
description = "A KVM control library for the GIGABYTE M27Q monitor."


[dependencies]
rusb = "0.8.1"
pico-args = "0.4.2"
tray-item = "0.5.0-alpha"
strum = "0.21"
strum_macros = "0.21"